make changes to css and add navbar and background image

--- a/index.html
+++ b/index.html
@@ -3,24 +3,39 @@
   <head>
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css" media="all">
     <link rel="stylesheet" href="css/styles.css" type="text/css" media="all">
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
     <title>RG Portfolio</title>
   </head>
   <body>
-    <ul>
-      <li><a class="active" href="#home">home</a></li>
-      <li><a href="#about">about</a></li>
-      <li><a href="#gallery">gallery</a></li>
-      <li><a href="#my work">my work</a></li>
-      <li><a href="#contact">contact</a></li>
-    </ul>
     <div class="container">
-      <div class="row">
-        <div class="col-md-4">
-          <h1>Richard Garrick</h1>
-          <h2>Portfolio Project</h2>
-
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a>About Me</a>
+          <ul>
+            <li><a href="#">Skills</a></li>
+            <li><a href="#">Hobbies</a></li>
+            <li><a href="#">Education</a></li>
+            <li><a href="#">Work Experience</a></li>
+          </ul>
+        </li>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="#">Gallery</a></li>
+        <li><a>Contact</a>
+          <ul>
+            <li><a href="#">Email</a></li>
+            <li><a href="#">Phone</a></li>
+            <li><a href="#">Tracking</a></li>
+          </ul>
+        </li>
+      </ul>
+    <br>
+      <div class="row" id="row1">
+        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12" id="row1_col1">
+          <h4>Image of Me</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12" id="row1_col2">
+          <h4>List of Projects</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
       </div>
