finish adding content to index and flesh out css and bootstrap stylesheets

--- a/index.html
+++ b/index.html
@@ -9,34 +9,47 @@
   <body>
     <div class="container">
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a>About Me</a>
+        <li><a href="index.html">Home <span class="glyphicon glyphicon-home"></span></a></li>
+        <li><a>About Me <span class="glyphicon glyphicon-user"></span></a>
           <ul>
-            <li><a href="#">Skills</a></li>
-            <li><a href="#">Hobbies</a></li>
-            <li><a href="#">Education</a></li>
-            <li><a href="#">Work Experience</a></li>
+            <li><a href="about.html">Skills <span class="glyphicon glyphicon-wrench"></span></a></li>
+            <li><a href="about.html">Hobbies <span class="glyphicon glyphicon-grain"></span></a></li>
+            <li><a href="about.html">Education <span class="glyphicon glyphicon-pencil"></span></a></li>
+            <li><a href="about.html">Work Experience <span class="glyphicon glyphicon-briefcase"></span></a></li>
           </ul>
         </li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Gallery</a></li>
-        <li><a>Contact</a>
+        <li><a href="portfolio.html">Portfolio <span class="glyphicon glyphicon-folder-open"></span></a></li>
+        <li><a href="gallery.html">Gallery <span class="glyphicon glyphicon-camera"></span></a></li>
+        <li><a>Contact <span class="glyphicon glyphicon-bullhorn"></span></a>
           <ul>
-            <li><a href="#">Email</a></li>
-            <li><a href="#">Phone</a></li>
-            <li><a href="#">Tracking</a></li>
+            <li><a href="contact.html">Email <span class="glyphicon glyphicon-envelope"></span></a></li>
+            <li><a href="contact.html">Phone <span class="glyphicon glyphicon-phone"></span></a></li>
           </ul>
         </li>
       </ul>
     <br>
       <div class="row" id="row1">
-        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12" id="row1_col1">
-          <h4>Image of Me</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 well" id="row1_col1" ><a href="#"><img class="img-responsive size img-rounded" src="img/rg_profile.png"></a>
+          <h4>Richard Garrick</h4>
+          <p>Most folks call me Rich.  This site is the <strong>first run</strong> at the portfolio project assigned by <a href="https://www.epicodus.com/" target="_blank">Epicodus</a>.</p>
         </div>
-        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12" id="row1_col2">
-          <h4>List of Projects</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 well" id="row1_col2">
+          <h4>Current Projects</h4>
+          <p>I have been working on <em>many projects</em> at Epicodus, the most current three are:</p>
+          <ol>
+            <li><a href="#">Wikipedia Clone</a></li>
+            <li><a href="#">Animal Shelter</a></li>
+            <li><a href="#">My Vacation</a></li>
+          </ol>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 well" id="row1_col3">
+          <h4>About Me</h4>
+          <p>There are many things that I have done in life.  Head over to the <a href="#">About Me</a> page to check them out.  You can also visit the <a href="#">gallery</a> to see many pictures.</p>
+          <ol>
+            <li><a href="#">Hobbies</a></li>
+            <li><a href="#">Education</a></li>
+            <li><a href="#">Work Experience</a></li>
+          </ol>
         </div>
       </div>
     </div>
