add checklist to main page of reguied items for code review

--- a/index.html
+++ b/index.html
@@ -7,29 +7,31 @@
     <title>RG Portfolio</title>
   </head>
   <body>
-    <div class="container">
-      <ul>
-        <li><a href="index.html">Home <span class="glyphicon glyphicon-home"></span></a></li>
-        <li><a>About Me <span class="glyphicon glyphicon-user"></span></a>
-          <ul>
-            <li><a href="about.html">Skills <span class="glyphicon glyphicon-wrench"></span></a></li>
-            <li><a href="about.html">Hobbies <span class="glyphicon glyphicon-grain"></span></a></li>
-            <li><a href="about.html">Education <span class="glyphicon glyphicon-pencil"></span></a></li>
-            <li><a href="about.html">Work Experience <span class="glyphicon glyphicon-briefcase"></span></a></li>
-          </ul>
-        </li>
-        <li><a href="portfolio.html">Portfolio <span class="glyphicon glyphicon-folder-open"></span></a></li>
-        <li><a href="gallery.html">Gallery <span class="glyphicon glyphicon-camera"></span></a></li>
-        <li><a>Contact <span class="glyphicon glyphicon-bullhorn"></span></a>
-          <ul>
-            <li><a href="contact.html">Email <span class="glyphicon glyphicon-envelope"></span></a></li>
-            <li><a href="contact.html">Phone <span class="glyphicon glyphicon-phone"></span></a></li>
-          </ul>
-        </li>
-      </ul>
+  <div class="container">
+    <ul>
+      <li><a href="index.html">Home <span class="glyphicon glyphicon-home"></span></a></li>
+      <li><a>About Me <span class="glyphicon glyphicon-user"></span></a>
+        <ul>
+          <li><a href="about.html">Skills <span class="glyphicon glyphicon-wrench"></span></a></li>
+          <li><a href="about.html">Hobbies <span class="glyphicon glyphicon-grain"></span></a></li>
+          <li><a href="about.html">Education <span class="glyphicon glyphicon-pencil"></span></a></li>
+          <li><a href="about.html">Work Experience <span class="glyphicon glyphicon-briefcase"></span></a></li>
+        </ul>
+      </li>
+      <li><a href="portfolio.html">Portfolio <span class="glyphicon glyphicon-folder-open"></span></a></li>
+      <li><a href="gallery.html">Gallery <span class="glyphicon glyphicon-camera"></span></a></li>
+      <li><a>Contact <span class="glyphicon glyphicon-bullhorn"></span></a>
+        <ul>
+          <li><a href="contact.html">Email <span class="glyphicon glyphicon-envelope"></span></a></li>
+          <li><a href="contact.html">Phone <span class="glyphicon glyphicon-phone"></span></a></li>
+        </ul>
+      </li>
+    </ul>
     <br>
+    <div class="container">
       <div class="row" id="row1">
-        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 well" id="row1_col1" ><a href="#"><img class="img-responsive size img-rounded" src="img/rg_profile.png"></a>
+        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 well" id="row1_col1" >
+          <a href="#"><img class="img-responsive size img-rounded" src="img/rg_profile.png"></a>
           <h4>Richard Garrick</h4>
           <p>Most folks call me Rich.  This site is the <strong>first run</strong> at the portfolio project assigned by <a href="https://www.epicodus.com/" target="_blank">Epicodus</a>.</p>
         </div>
@@ -37,9 +39,9 @@
           <h4>Current Projects</h4>
           <p>I have been working on <em>many projects</em> at Epicodus, the most current three are:</p>
           <ol>
-            <li><a href="#">Wikipedia Clone</a></li>
-            <li><a href="#">Animal Shelter</a></li>
-            <li><a href="#">My Vacation</a></li>
+            <li><a href="https://rg-epicodus.github.io/richipedia/" target="_blank">Wikipedia Clone</a></li>
+            <li><a href="https://rg-epicodus.github.io/Milwaukie-Animal-Shelter/" target="_blank">Animal Shelter</a></li>
+            <li><a href="https://rg-epicodus.github.io/week-in-review/" target="_blank">Week in Review</a></li>
           </ol>
         </div>
         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 well" id="row1_col3">
@@ -52,6 +54,114 @@
           </ol>
         </div>
       </div>
+      <div class="row row2">
+        <div class="col-lg-9 col-md-9 col-sm-6 col-xs-12 well" id="row_checklist">
+          <h4>Independent Code Review Checklist</h4>
+          <p>The following <em>requirements</em> are present in the project:</p>
+          <form>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">Name</label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">Image</label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">Project List</label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">About Me Section</label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">Education</label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">Experience</label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">Current Hobbies</label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">Interests</label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">Skills</label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">Site can be viewed at <a href="https://rg-epicodus.github.io/Portfolio" target="_blank" >rg-epicodus.github.io/portfolio</a></label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">HTML Tag (p) used</label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">HTML Tag (h) used</label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">HTML Tag (ul) used</label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">HTML Tag (ol) used</label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">HTML Tag (li) usede</label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">HTML Tag (em) used</label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">HTML Tag (strong) used</label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">HTML Tag (a) used</label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">HTML Tag (img) used</label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">HTML Tag (div) used</label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">HTML Tag (span) used</label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">Bootstrap used for page style</label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">CSS: Cascading used</label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">CSS: Box Model used</label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">CSS: Floats used</label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">HTML Indentation accurate</label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">HTML Spacing accurate</label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">CSS Indentation accurate</label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">CSS Spacing accurate</label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">Regular GitHub Commits</label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">README included</label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">Site deployed to GitHub</label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">Site in Polished State</label>
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
+  </div>
   </body>
 </html>
