--- a/gallery.html
+++ b/gallery.html
@@ -1,10 +1,77 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8">
-    <title></title>
+    <link rel="stylesheet" href="css/bootstrap.css" type="text/css" media="all">
+    <link rel="stylesheet" href="css/styles.css" type="text/css" media="all">
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+    <title>RG Portfolio</title>
   </head>
   <body>
-    
+  <div class="container">
+    <ul>
+      <li><a href="index.html">Home <span class="glyphicon glyphicon-home"></span></a></li>
+      <li><a>About Me <span class="glyphicon glyphicon-user"></span></a>
+        <ul>
+          <li><a href="about.html">Skills <span class="glyphicon glyphicon-wrench"></span></a></li>
+          <li><a href="about.html">Hobbies <span class="glyphicon glyphicon-grain"></span></a></li>
+          <li><a href="about.html">Education <span class="glyphicon glyphicon-pencil"></span></a></li>
+          <li><a href="about.html">Work Experience <span class="glyphicon glyphicon-briefcase"></span></a></li>
+        </ul>
+      </li>
+      <li><a href="portfolio.html">Portfolio <span class="glyphicon glyphicon-folder-open"></span></a></li>
+      <li><a href="gallery.html">Gallery <span class="glyphicon glyphicon-camera"></span></a></li>
+      <li><a>Contact <span class="glyphicon glyphicon-bullhorn"></span></a>
+        <ul>
+          <li><a href="contact.html">Email <span class="glyphicon glyphicon-envelope"></span></a></li>
+          <li><a href="contact.html">Phone <span class="glyphicon glyphicon-phone"></span></a></li>
+        </ul>
+      </li>
+    </ul>
+    <br>
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner">
+        <div class="item active">
+          <img src="img/20161105_094014.jpg" alt="In the Yurt">
+        </div>
+        <div class="item">
+          <img src="img/20161105_121113.jpg" alt="Rogue Menu">
+        </div>
+        <div class="item">
+          <img src="img/20161105_121720.jpg" alt="Root Beer Float">
+        </div>
+        <div class="item">
+          <img src="img/20161106_124112.jpg" alt="Lunch">
+        </div>
+        <div class="item">
+          <img src="img/20161106_124121.jpg" alt="Moar Plz">
+        </div>
+        <div class="item">
+          <img src="img/20161111_130848.jpg" alt="Portland Hike">
+        </div>
+        <div class="item">
+          <img src="img/20161111_130917.jpg" alt="Hikers Three">
+        </div>
+        <div class="item">
+          <img src="img/20161111_151753.jpg" alt="Wall in the West">
+        </div>
+        <div class="item">
+          <img src="img/20161111_151814.jpg" alt="I can do it myself">
+        </div>
+      </div>
+
+      <!-- Left and right controls -->
+      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+      </a>
+    </div>
+  </div>
+  <!--latest jQuery-->
+  <script src="https://code.jquery.com/jquery-1.12.2.min.js" integrity="sha256-lZFHibXzMHo3GGeehn1hudTAP3Sc0uKXBXAzHX1sjtk=" crossorigin="anonymous"></script>
+  <!--Bootstrap-->
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   </body>
 </html>
