revise the remaining pages and finalize site for release

--- a/about.html
+++ b/about.html
@@ -28,6 +28,30 @@
       </li>
     </ul>
     <br>
+    <div class="row row1">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 well" id="row1_aboutme">
+        <h3>Skills</h3>
+        <p>I have been around enough to have a very large amount of skills in a very large amout of fields.  I enjoy learning and would make that my living if at all possible.</p>
+      </div>
+    </div>
+    <div class="row row2">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 well" id="row2_aboutme">
+        <h3>Hobbies</h3>
+        <p>From <strong>Leatherworking to Farming</strong>, my hobbies and interests are endless.</p>
+      </div>
+    </div>
+    <div class="row row3">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 well" id="row2_aboutme">
+        <h3>Education</h3>
+        <p>I attended the School of Hard Knocks, earning a degree in Life Management.  <span class="important">I have self-taught mostly everythign I know since mid high school</span>.</p>
+      </div>
+    </div>
+    <div class="row row4">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 well" id="row2_aboutme">
+        <h3>Work Experience</h3>
+        <p>From picking Raspberries and Strawberries to <em>managing a large firm</em>, I have had the opportunity to learn from many people and make many <span class="important">co-workers and colleagues over my life</span>co-workers and colleagues over my life.</p>
+      </div>
+    </div>
   </div>
   </body>
 </html>
