--- a/portfolio.html
+++ b/portfolio.html
@@ -28,5 +28,12 @@
       </li>
     </ul>
     <br>
+    <div class="row" id="row1">
+      <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 well" id="row1_col1" >
+        <h4>Portfolio of work done</h4>
+        <p>Below is a link to my portfolio on GitHub.  It contains everything I have done independently or in pairs to this date.</p>
+        <a href="https://github.com/rg-epicodus" target="_blank">GitHub Repository</a>
+      </div>
+    </div>
   </div>
   </body>
